package com.example.androidproject.dataclasses;

public class Vice {

    public Vice() {

    }

}
